kustomize/overlays/beta/evry-com/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-administrasjon-organisasjon
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`beta.felleskomponent.no`) && (PathPrefix( `/administrasjon/organisasjon`) && Headers(`x-org-id`, `evry.com`))"
      kind: Rule
      services:
        - name: fint-core-consumer-administrasjon-organisasjon
          port: 8080
